Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.1.0-beta
-
None
-
62117ee21f4ba301709af8d250841dd522ff0c7f
Description
Looks like the removal of deployment.pri from the templates broke deployment to devices.
Please re-add a deployment.pri:
android-no-sdk { target.path = /data/user/qt export(target.path) INSTALLS += target } else:android { x86 { target.path = /libs/x86 } else: armeabi-v7a { target.path = /libs/armeabi-v7a } else { target.path = /libs/armeabi } export(target.path) INSTALLS += target } else:unix { !isEmpty(target.path) { installPrefix = $${target.path} } else { installPrefix = /opt/$${TARGET} } isEmpty(target.path) { target.path = $${installPrefix}/bin export(target.path) } INSTALLS += target } export(INSTALLS)
And append to main.pro:
# Default rules for deployment.
include(deployment.pri)
Attachments
Issue Links
- relates to
-
QTCREATORBUG-11264 Update & Simplify Qt Quick Application wizards
-
- Closed
-
-
QTCREATORBUG-10932 Find an another alternative to 'cp -r' for deploy QMLs to iOS bundle
-
- Closed
-
- resulted in
-
QTCREATORBUG-14455 Wizards still create a deployment.pri
-
- Closed
-