Fix deployment for QtQuick templates

Task-number: QTCREATORBUG-11412

Change-Id: Iee117faaf85fcaa3e216091a8f7d95b4e12237cb
Reviewed-by: Kai Koehne <kai.koehne@digia.com>