share/qtcreator/templates/qtquick/qtquickcontrols_1_1/app.pro
@@ -8,3 +8,6 @@ RESOURCES += qml.qrc
 
 # Additional import path used to resolve QML modules in Qt Creator's code model
 QML_IMPORT_PATH =
+
+# Default rules for deployment.
+include(../../shared/qrcdeployment.pri)
